Fix map div alignment for Confirmation Show.

--- a/app/assets/stylesheets/dashboard/_dashboard.scss
+++ b/app/assets/stylesheets/dashboard/_dashboard.scss
@@ -15,24 +15,6 @@
   top: 5%;
 }
 
-.graph {
-  background-color: white;
-  position: absolute;
-  width: 572px;
-  height: 280px;
-  left: 10%;
-  top: 20%;
-  padding: 24px;
-  border-radius: 25px;
-  box-shadow: 0px 8px 40px
-    rgba(
-      112.000000923872,
-      144.00000661611557,
-      176.00000470876694,
-      0.20000000298023224
-    );
-}
-
 .mini-container {
   background-color: white;
   position: absolute;
